<resources>
    <string name="app_name">NewsApp</string>
    <string name="topheadline_sources">Topheadline Sources</string>
    <string name="dummy_error_msg">Error occurred</string>
    <string name="dashboard">Dashboard</string>
    <string name="top_headlines_text">Topheadline Sources</string>
    <string name="pagination_topheadline_sources">Pagination Topheadline Sources</string>
    <string name="offline_topheadlines_sources_text">Offline Topheadline Sources</string>
    <string name="news_categories">News Categories</string>
    <string name="country_selection_text">Country Selection</string>
    <string name="language_selection_text">Language Selection</string>
    <string name="search_text">Search</string>
    <string name="dummy_news_title">ABC News (AU)</string>
    <string name="dummy_news_description">Australia\'s most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.</string>
    <string name="dummy_category_value">general</string>
    <string name="dummy_country_value">India</string>
    <string name="dummy_language_value">English</string>
    <string name="category">Category : </string>
    <string name="country">Country : </string>
    <string name="language">Language : </string>
    <string name="category_news_empty_display_text">Looks like there’s no news in this category right now. Check again later for more updates!</string>
    <string name="category_news">Category News</string>
    <string name="news_categories_headline">%s News</string>
    <string name="country_news">Country News</string>
    <string name="country_news_empty_display_text">No current news for this country. Come back for more updates!</string>
    <string name="news_countries_headline">%s News Update</string>
    <string name="news_languages_headline">Latest News in %s</string>
    <string name="language_news_empty_display_text">No news available in %s at the moment. Please check back later!</string>
    <string name="dummy_languages_news_headline">Latest News in English</string>
    <string name="language_text">Language</string>
    <string name="sort_by_text">Sort By</string>
    <string name="author_dummy_value">Jennifer Pattison Tuohy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>